# chebyshev_typicality

./: .gitignore  CLAUDE.md  Chebyshev_array.txt  Chebyshev_array_job.sh  Extrapolate_nonlocal.py  J_array_job.sh  Makefile  Plot.py  Plot_3_sdmft.py  Plot_B_extrapolate.py  Plot_B_sdmft.py  Plot_B_stack.py  Plot_B_stusti.py  Plot_Chebyshev.py  Plot_Csdmft.py  Plot_CspinDMFT_sites.py  Plot_Glass.py  Plot_N.py  Plot_VV_N_CW.py  Plot_VV_beta.py  Plot_VV_beta_CW.py  Plot_cov.py  Plot_dt.py  Plot_h.py  Plot_h_field.py  Plot_inf.py  Plot_nl.py  Plot_nl_N_CW.py  Plot_nl_beta.py  Plot_nl_beta_CW.py  Plot_nl_beta_random.py  Plot_nonlocal_comparison.py  Plot_numC.py  Plot_numvec.py  Plot_realtime.py  Plot_realtime_square.py  Plot_rescale.py  Plot_sdmft.py  Plot_site.py  Plot_stusti.py  (+28 more)
Algorithm/: CMakeLists.txt  CMakeLists.txt_  main.cpp  main_header.h
Algorithm/Executables_FLOAT/: main.out
Algorithm/Functions/: Functions.cpp  Functions.h
Algorithm/Hamiltonians/: Hamiltonians.cpp  Hamiltonians.h
Algorithm/Parameter_Space/: Parameter_Space.cpp  Parameter_Space.h
Algorithm/Storage_Concept/: HDF5_Routines.h  STOC_Error_Handling.h  Storage_Concept.cpp  Storage_Concept.h
Algorithm/Time_Measurement/: Time_Measurement.cpp  Time_Measurement.h
Algorithm/Types/: Tensors.h  Types.h
Algorithm/cpp_libs/: HDF5_Routines.h
Algorithm_random_couplings/: CMakeLists.txt_  main.cpp
Couplings/: CW_N=16.hdf5  CW_N=17.hdf5  CW_N=18.hdf5  CW_N=19.hdf5  CW_N=20.hdf5  Cube_NN_PBC_N=18.hdf5  Square_Frustrated_PBC_N=16.hdf5  Square_Frustrated_PBC_N=18.hdf5  Square_Frustrated_PBC_N=20.hdf5  Square_Frustrated_PBC_N=24.hdf5  Square_Glass_N=16.hdf5  Square_NN_PBC_N=18.hdf5  Square_NN_PBC_N=20.hdf5  Square_NN_PBC_N=24.hdf5  Square_NN_PBC_N=25.hdf5  Square_Random_N=20.hdf5  Square_Random_N=24.hdf5
Data/: ISO__Chain_NN_PBC_N=2__beta=0.2__rescale=0.5.hdf5  ISO__Chain_NN_PBC_N=2__beta=0.2__rescale=0.5X.hdf5  ISO__Chain_NN_PBC_N=2__beta=0.2__rescale=0.5XX.hdf5  ISO__Cube_NN_PBC_N=18__sites=0-1-4__beta=0.2__rescale=-0.5.hdf5  ISO__Cube_NN_PBC_N=18__sites=0-1-4__beta=0.2__rescale=0.5.hdf5  ISO__Cube_NN_PBC_N=18__sites=0-1-4__beta=0.5__rescale=-0.5.hdf5  ISO__Cube_NN_PBC_N=18__sites=0-1-4__beta=0.5__rescale=0.5.hdf5  (+308 more)
(+783 files in other folders)
